Fixed: FindBugs reported warnings in marathon.